# gmabutton

./: .gitignore  CLAUDE.md  CMakeLists.txt  FLASH.md  README.md  sdkconfig  sdkconfig.defaults
.claude/: settings.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
main/: CMakeLists.txt  alert.c  alert.h  app_state.h  calibration.c  calibration.h  draw.c  draw.h  http_server.c  http_server.h  idf_component.yml  ili9341.c  ili9341.h  led.c  led.h  main.c  nvs_config.c  nvs_config.h  peer_comms.c  peer_comms.h  screensaver.c  screensaver.h  screensaver_geiss.c  screensaver_geiss.h  screensaver_noofcyd.c  screensaver_noofcyd.h  touch.c  touch.h  wifi_manager.c  wifi_manager.h  wireguard_mgr.c  wireguard_mgr.h
